# BundleSDF

./: .gitignore  Utils.py  benchmark_ho3d.py  build.sh  bundlesdf.py  config.yml  gui.py  loftr_wrapper.py  log.dexycb  nerf_helpers.py  nerf_runner.py  offscreen_renderer.py  readme.md  run_custom.py  run_dexycb.py  run_ho3d.py  run_hopipe.py  segmentation_utils.py  tool.py
BundleTrack/: CMakeLists.txt  config_behave.yml  config_ho3d.yml  config_ycbineoat.yml
BundleTrack/LoFTR/: predict.py
BundleTrack/LoFTR/src/config/: default.py
BundleTrack/LoFTR/src/datasets/: megadepth.py
BundleTrack/LoFTR/src/loftr/: loftr.py
BundleTrack/LoFTR/src/loftr/utils/: coarse_matching.py
BundleTrack/pybind_interface/: pybind_api.cpp
BundleTrack/scripts/: data_reader.py
BundleTrack/src/: Bundler.cpp  Bundler.h  EigenDenseBaseAddons.h  FeatureManager.cpp  FeatureManager.h  Frame.cpp  Frame.h  Utils.cpp  Utils.h
BundleTrack/src/cuda/: CUDACache.cpp  CUDACache.cu  CUDACache.h  CUDACacheUtil.h  CUDACameraUtil.h  CUDAImageUtil.cu  CUDAImageUtil.h  CUDATimer.h  LossGPU.cpp  LossGPU.h  SBA.h  SIFTImageManager.cpp  SIFTImageManager.cu  SIFTImageManager.h  common.h  cudaUtil.h  cuda_SimpleMatrixUtil.h  cuda_ransac.cu  cutil_math.h
BundleTrack/src/cuda/Solver/: CUDASolverBundling.cu  CUDASolverBundling.h  LieDerivUtil.h  SolverBundling.cu  SolverBundlingDenseUtil.h  SolverBundlingEquationsLie.h  SolverBundlingParameters.h  SolverBundlingState.h
BundleTrack/src/fmt/: core.h  format-inl.h  format.cc  format.h
datasets/: .gitignore
docker/: Dockerfile  build_container.sh  config.sh  docker_build.sh  docker_run.sh  docker_shell.sh  docker_stop.sh  dockerfile  new_shell.sh  requirements.txt  run_container.sh  stop_container.sh
mycuda/: bindings.cpp  common.cu  common.h  setup.py
mycuda/torch_ngp_grid_encoder/: bindings.cpp  grid.py  gridencoder.cu  gridencoder.h
notebooks/: dexycb_dataloader.ipynb
scripts/: run_demo.sh  run_demo2.sh  run_dexycb.sh  run_hopipe.sh  run_hopipe2.sh
